@@ -34,77 +34,14 @@
 		<!--About this addon-->		
 		<control type="group">
 			<posx>col-1-begin</posx>
-			<posy>row-1-begin</posy>
-			
-			<control type="image">
-				<posx>0</posx>
-				<posy>4-row</posy>
-				<width>7-col</width>
-				<height>7-col</height>
-				<aspectratio>stretch</aspectratio>
-				<texture fallback="colors/offblack.png">$INFO[ListItem.art(thumb)]</texture>
-				<!--animations-->
-				<animation effect="slide" start="-300,0" time="200" delay="400">WindowOpen</animation>
-			</control>
-			
-			<control type="group">
-				<posx>8-col</posx>
-				
-				<!--animations-->
-				<animation effect="fade" start="0" end="100" time="300" delay="500">WindowOpen</animation>
-				
-				<control type="label">
-					<description>Addon Title</description>
-					<posx>0</posx>
-					<posy>4-row</posy>
-					<width>12-col-gutter</width>
-					<font>smallStrong</font>
-					<label>[B][COLOR accented]$INFO[ListItem.Property(Addon.Status)] Addons |[/COLOR] $INFO[ListItem.Property(Addon.Type)][/B]</label>
-				</control>
-			
-				<control type="label">
-					<description>Addon Title</description>
-					<posx>0</posx>
-					<posy>5-row</posy>
-					<width>12-col-gutter</width>
-					<font>dialogTitle</font>
-					<label>$INFO[ListItem.Property(Addon.Name)]</label>
-				</control>
-			
-				<control type="label">
-					<posx>0</posx>
-					<posy>6-row</posy>
-					<width>12-col-gutter</width>
-					<font>regularStrong</font>
-					<label>$LOCALIZE[31081] $INFO[ListItem.Property(Addon.Creator)] • $LOCALIZE[31082] $INFO[ListItem.Property(Addon.Version)]</label>
-				</control>
-			
-				<control type="textbox" id="400">
-					<posx>0</posx>
-					<posy>7-row</posy>
-					<font>regular</font>
-					<width>13-col</width>
-					<height>340</height>
-					<label>$INFO[ListItem.Property(Addon.Description)]</label>
-					<autoscroll delay="5000" time="1000" repeat="10000"></autoscroll>
-				</control>
-			</control>
-						
-		</control>
-		
-		<!--dialog controls-->	
-		<control type="group">
-			<visible>!Window.IsVisible(AddonSettings) + !Window.IsActive(TextViewer)</visible>
-			
-			<posx>0</posx>
-			<posy>938</posy>
+			<posy>row-2-begin</posy>
 			
 			<!--animations-->
-			<animation effect="slide" start="0,100" time="200" delay="300">WindowOpen</animation>
-								
+			<include>modalDialogInOutVertical</include>
+			
 			<control type="image">
-				<posx>0</posx>
-				<posy>0</posy>
+				<posx>-96</posx>
+				<posy>44</posy>
 				<width>fullscreenWidth</width>
 				<height>1-row</height>
 				<texture>colors/white.png</texture>
@@ -112,73 +49,198 @@
 				<aspectratio>stretch</aspectratio>
 			</control>
 			
-			<control type="list" id="8000">
-				<posx>col-9-begin</posx>
-				<posy>2</posy>
-				<width>24-col</width>
+			<control type="image">
+				<posx>-3</posx>
+				<posy>44</posy>
+				<width>1155</width>
 				<height>1-row</height>
-				<itemgap>0</itemgap>
-				<orientation>horizontal</orientation>
-
-				<itemlayout width="3-col" height="43">
-
-					<control type="label">
-						<posx>75</posx>
-						<posy>0</posy>
-						<width>3-col</width>
-						<align>center</align>
-						<font>menuTitle</font>
-						<textcolor>black</textcolor>
-						<label>$INFO[ListItem.label]</label>
-						<shadowcolor>-</shadowcolor>
-					</control>
-
-				</itemlayout>
-
-				<focusedlayout width="3-col" height="43">
-
-					<control type="label">
-						<posx>75</posx>
-						<posy>0</posy>
-						<width>3-col</width>
-						<align>center</align>
-						<font>menuTitle</font>
-						<textcolor>black</textcolor>
-						<label>[ $INFO[ListItem.label] ]</label>
-						<shadowcolor>-</shadowcolor>
-					</control>
-
-				</focusedlayout>
-
-				<content>
-					<item id="1">
-						<label>$INFO[Control.GetLabel(6)]</label>
-						<thumb>-</thumb>
-						<onclick>SendClick(6)</onclick>
-					</item>
-					<item id="2">
-						<visible>Control.IsEnabled(8)</visible>
-						<label>$INFO[Control.GetLabel(8)]</label>
-						<thumb>-</thumb>
-						<onclick>SendClick(8)</onclick>
-					</item>
-					<item id="3">
-						<visible>Control.IsEnabled(7)</visible>
-						<label>$INFO[Control.GetLabel(7)]</label>
-						<thumb>-</thumb>
-						<onclick>SendClick(7)</onclick>
-					</item>
-					<item id="4">
-						<visible>Control.IsEnabled(9)</visible>
-						<label>$INFO[Control.GetLabel(9)]</label>
-						<thumb>-</thumb>
-						<onclick>SendClick(9)</onclick>
-					</item>
-				</content>
-
+				<texture>colors/white.png</texture>
+				<bordertexture border="0">colors/black.png</bordertexture>
+				<bordersize>3,0,0,0</bordersize>
+				<colordiffuse>ffffffff</colordiffuse>
+				<aspectratio>stretch</aspectratio>
 			</control>
+			
+			<control type="label">
+				<posx>12</posx>
+				<posy>47</posy>
+				<width>16-col</width>
+				<font>pageTitle</font>
+				<label>$INFO[ListItem.Property(Addon.Type)]</label>
+				<textcolor>black</textcolor>
+				<shadowcolor>-</shadowcolor>
+			</control>
+			
+			<control type="image">
+				<posx>0</posx>
+				<posy>159</posy>
+				<width>5-col</width>
+				<height>5-col</height>
+				<aspectratio>stretch</aspectratio>
+				<texture fallback="colors/offblack.png">$INFO[ListItem.art(thumb)]</texture>
+			</control>
+			
+			<control type="group">
+				<posx>6-col</posx>
+								
+				<control type="label">
+					<description>Addon Title</description>
+					<posx>0</posx>
+					<posy>3-row</posy>
+					<width>13-col-gutter</width>
+					<font>dialogTitle</font>
+					<label>$INFO[ListItem.Property(Addon.Name)]</label>
+				</control>
+			
+				<control type="label">
+					<posx>0</posx>
+					<posy>4-row</posy>
+					<width>13-col-gutter</width>
+					<font>regularStrong</font>
+					<label>$LOCALIZE[31081] $INFO[ListItem.Property(Addon.Creator)] • $LOCALIZE[31082] $INFO[ListItem.Property(Addon.Version)]</label>
+				</control>
+			
+				<control type="textbox" id="400">
+					<posx>0</posx>
+					<posy>5-row</posy>
+					<font>small</font>
+					<width>13-col-gutter</width>
+					<height>340</height>
+					<label>[B]$INFO[ListItem.Property(Addon.Description)][/B]</label>
+					<autoscroll delay="5000" time="1000" repeat="10000"></autoscroll>
+				</control>
+			</control>
+			
+			<!--dialog controls-->	
+			<control type="group">
+				<visible>!Window.IsVisible(AddonSettings) + !Window.IsActive(TextViewer)</visible>
+
+				<posx>0</posx>
+				<posy>10-row</posy>
+
+				<control type="list" id="8000">
+					<posx>0</posx>
+					<posy>12</posy>
+					<width>5-col</width>
+					<height>5-row</height>
+					<itemgap>3</itemgap>
+					<orientation>vertical</orientation>
+
+					<itemlayout width="6-col" height="1-row">
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<height>53</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/black.png</texture>
+						</control>
+
+						<control type="label">
+							<posx>24</posx>
+							<posy>0</posy>
+							<width>1-col</width>
+							<font>symbol</font>
+							<textcolor>white</textcolor>
+							<label>$INFO[ListItem.label2]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+						<control type="label">
+							<posx>1-col</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<font>menuTitle</font>
+							<textcolor>white</textcolor>
+							<label>$INFO[ListItem.label]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+					</itemlayout>
+
+					<focusedlayout width="6-col" height="1-row">
+
+						<control type="image">
+							<posx>0</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<height>53</height>
+							<aspectratio>stretch</aspectratio>
+							<texture>colors/white.png</texture>
+						</control>
+
+						<control type="label">
+							<posx>24</posx>
+							<posy>0</posy>
+							<width>1-col</width>
+							<font>symbol</font>
+							<textcolor>black</textcolor>
+							<label>$INFO[ListItem.label2]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+						<control type="label">
+							<posx>1-col</posx>
+							<posy>2</posy>
+							<width>6-col</width>
+							<font>menuTitle</font>
+							<textcolor>black</textcolor>
+							<label>$INFO[ListItem.label]</label>
+							<shadowcolor>-</shadowcolor>
+						</control>
+
+					</focusedlayout>
+
+					<content>
+						<item id="1">
+							<label>$INFO[Control.GetLabel(6)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(6)</onclick>
+						</item>
+						<item id="2">
+							<visible>Control.IsEnabled(8)</visible>
+							<label>$INFO[Control.GetLabel(8)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(8)</onclick>
+						</item>
+						<item id="6">
+							<visible>Control.IsEnabled(11)</visible>
+							<label>$INFO[Control.GetLabel(11)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(11)</onclick>
+						</item>
+						<item id="3">
+							<visible>Control.IsEnabled(7)</visible>
+							<label>$INFO[Control.GetLabel(7)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(7)</onclick>
+						</item>
+						<item id="4">
+							<visible>Control.IsEnabled(9)</visible>
+							<label>$INFO[Control.GetLabel(9)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(9)</onclick>
+						</item>
+						<item id="5">
+							<visible>Control.IsEnabled(10)</visible>
+							<label>$INFO[Control.GetLabel(10)]</label>
+							<label2></label2>
+							<thumb>-</thumb>
+							<onclick>SendClick(10)</onclick>
+						</item>
+					</content>
+
+				</control>
+			</control>
+						
 		</control>
-		
+			
 		<!--buttons-->
 		<control type="group">
 			<visible>false</visible>
@@ -201,6 +263,17 @@
 				<description>Addon Settings</description>
 				<label>31083</label>
 			</control>
+			
+			<control type="button" id="10">
+				<description>Changelog button</description>
+				<label>24036</label>
+			</control>
+			
+			<control type="button" id="11">
+				<description>Rollback button</description>
+				<label>24048</label>
+			</control>
+			
 		</control>
 			
 		<!--debugging-->
