@@ -1,0 +1,47 @@
+<window id="147">
+	<defaultcontrol>61</defaultcontrol>
+
+	<controls>
+
+		<include>modalDialog</include>
+		<control type="image">
+			<include>dimensionsFullscreen</include>
+			<texture>colors/black.png</texture>
+			<colordiffuse>33FFFFFF</colordiffuse>
+			<aspectratio>stretch</aspectratio>
+		</control>
+
+		<control type="group">
+			<posx>col-5-begin</posx>
+			<posy>row-3-begin</posy>
+
+			<control type="label" id="1">
+				<description>header label</description>
+				<posx>0</posx>
+				<posy>0</posy>
+				<width>16-col</width>
+				<font>pageTitle</font>
+			</control>
+
+			<control type="textbox" id="5">
+				<description>textarea</description>
+				<posx>0</posx>
+				<posy>84</posy>
+				<width>16-col-gutter</width>
+				<height>640</height>
+				<align>left</align>
+				<font>small</font>
+			</control>
+
+		</control>
+		
+		<!--debugging-->
+		<include>Debug_Grid</include>
+		<control type="label">
+			<include>DialogID</include>
+			<label>DialogTextViewer.xml</label>
+		</control>
+		
+	</controls>
+
+</window>
