@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.maximinimalism" version="0.1.2" name="Maximinimalism" provider-name="theDeadman">
+<addon id="skin.maximinimalism" version="0.1.3" name="Maximinimalism" provider-name="theDeadman">
 	<requires>
 		<import addon="xbmc.gui" version="4.0.0"/>
 	</requires>
