@@ -1,3 +1,7 @@
+[B]0.1.3[/B]
+- Addon info dialog reworked
+- DialogTextviewer.xml added
+
 [B]0.1.2[/B]
 - General misc tidy up skin-wide
 - .DS Store entries removed
